production/containers/configuration/default/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/nginx/nginx:stable
      ports:
      - containerPort: 80
